--- a/packages/config/templates/workspace/package/README.ejs
+++ b/packages/config/templates/workspace/package/README.ejs
@@ -1,7 +1,7 @@
 ---
 to: packages/<%= name %>/README.md
 ---
-# <%= u.changeCase.titleCase(name) %>
+# <%= h.changeCase.titleCase(name) %>
 
 [![Build Status](https://travis-ci.org/milesj/<%= repo %>.svg?branch=master)](https://travis-ci.org/milesj/<%= repo %>)
 [![npm version](https://badge.fury.io/js/%40<%= repo %>%2F<%= name %>.svg)](https://www.npmjs.com/package/<%= repo %>/<%= name %>)
