--- a/packages/config/templates/project/dotfiles/travis.ejs
+++ b/packages/config/templates/project/dotfiles/travis.ejs
@@ -9,7 +9,7 @@ node_js:
 before_script:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
-  - yarn install --frozen-lockfile
+  - yarn install --frozen-lockfile --ignore-engines
   # Workspaces only
   - yarn run build
 script: yarn test
