Update React and Enzyme.

--- a/packages/config/templates/workspace/package/package.ejs
+++ b/packages/config/templates/workspace/package/package.ejs
@@ -9,6 +9,7 @@ to: packages/<%= name %>/package.json
   "main": "./lib/index.js",
   "module": "./esm/index.js",
   "types": "./lib/index.d.ts",
+  "sideEffects": false,
   "engines": {
     "node": ">=8.9.0"
   },
