--- a/packages/config/templates/project/dotfiles/travis.ejs
+++ b/packages/config/templates/project/dotfiles/travis.ejs
@@ -6,13 +6,15 @@ node_js:
   - '8'
   - '10'
   - '12'
-before_script:
+before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
+install:
   - yarn install --frozen-lockfile --ignore-engines
-  # Workspaces only
+before_script:
   - yarn run build
-script: yarn test
+script:
+  - yarn test
 notifications:
   email: false
 cache:
