--- a/packages/config/templates/workspace/package/README.ejs
+++ b/packages/config/templates/workspace/package/README.ejs
@@ -3,6 +3,6 @@ to: packages/<%= name %>/README.md
 ---
 # <%= h.changeCase.titleCase(name) %>
 
-[![Build Status](https://travis-ci.org/milesj/<%= repo %>.svg?branch=master)](https://travis-ci.org/milesj/<%= repo %>)
+[![Build Status](https://github.com/milesj/<%= repo %>/workflows/Build/badge.svg)](https://github.com/milesj/<%= repo %>/actions?query=branch%3Amaster)
 [![npm version](https://badge.fury.io/js/%40<%= repo %>%2F<%= name %>.svg)](https://www.npmjs.com/package/@<%= repo %>/<%= name %>)
 [![npm deps](https://david-dm.org/milesj/<%= repo %>.svg?path=packages/<%= name %>)](https://www.npmjs.com/package/@<%= repo %>/<%= name %>)
