--- a/packages/config/templates/project/dotfiles/npmignore.ejs
+++ b/packages/config/templates/project/dotfiles/npmignore.ejs
@@ -10,6 +10,7 @@ logs/
 .idea
 .npm
 .vscode
+.yarn
 .yarnclean
 yarn.lock
 
@@ -38,4 +39,5 @@ book.json
 jest.config.js
 prettier.config.js
 tsconfig.json
+*.tsbuildinfo
 webpack.config.js
