--- a/packages/config/templates/project/github/build.ejs
+++ b/packages/config/templates/project/github/build.ejs
@@ -2,7 +2,11 @@
 to: .github/workflows/build.yml
 ---
 name: Build
-on: push
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 jobs:
   test:
     name: Test
