Update scripts and templates.

--- a/packages/config/templates/workspace/package/package.ejs
+++ b/packages/config/templates/workspace/package/package.ejs
@@ -20,5 +20,9 @@ to: packages/<%= name %>/package.json
   },
   "dependencies": {},
   "devDependencies": {},
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "funding": {
+    "type": "ko-fi",
+    "url": "https://ko-fi.com/milesjohnson"
+  },
 }
