--- a/packages/config/templates/project/github/build.ejs
+++ b/packages/config/templates/project/github/build.ejs
@@ -17,7 +17,7 @@ jobs:
       fail-fast: true
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --ignore-engines --frozen-lockfile
@@ -25,3 +25,21 @@ jobs:
       - run: yarn run type
       - run: yarn run coverage
       - run: yarn run lint
+  pack:
+    name: Pack
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - run: yarn install --ignore-engines --frozen-lockfile
+      - run: yarn run pack
+  docs:
+    name: Docs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - run: |
+          cd website
+          yarn install --ignore-engines --frozen-lockfile
+          yarn run build
