--- a/packages/config/templates/workspace/package/package.ejs
+++ b/packages/config/templates/workspace/package/package.ejs
@@ -8,10 +8,10 @@ to: packages/<%= name %>/package.json
   "keywords": [],
   "main": "./lib/index.js",
   "module": "./esm/index.js",
-  "types": "./lib/index.d.ts",
+  "types": "./dts/index.d.ts",
   "sideEffects": false,
   "engines": {
-    "node": ">=10.10.0"
+    "node": ">=10.3.0"
   },
   "repository": "https://github.com/milesj/<%= repo %>/tree/master/packages/<%= name %>",
   "license": "MIT",
@@ -20,5 +20,9 @@ to: packages/<%= name %>/package.json
   },
   "dependencies": {},
   "devDependencies": {},
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "funding": {
+    "type": "ko-fi",
+    "url": "https://ko-fi.com/milesjohnson"
+  },
 }
